deploy/kubernetes/namespace-portfolio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: proyectoportfolio
  labels:
    name: proyectoportfolio
