deploy/kubernetes/service-portfolio.yml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: proyectoportfolio
spec:
  type: NodePort
  selector:
    app: portfolio
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081 # Usamos un puerto diferente al del ejemplo anterior (30080)
